--- a/index.css
+++ b/index.css
@@ -31,13 +31,13 @@
   --font-size: 16px;
 }
 
-body {
-  width: 100%;
-  height: 100vh;
-  background: linear-gradient(135deg, hsl(0, 0%, 100%), hsl(0, 100%, 98%));
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+.base-apparel-coming-soon{
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(135deg, hsl(0, 0%, 100%), hsl(0, 100%, 98%));
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .base-apparel-coming-soon-master {
@@ -55,9 +55,9 @@ body {
 }
 
 .base-apparel-heading {
-  font-size: 6.5rem;
+  font-size: 4.5rem;
   padding-right: 15rem;
-  font-weight: 500;
+  font-weight: 400;
   line-height: 5.5rem;
   letter-spacing: 1rem;
   margin-bottom: 2rem;
@@ -69,7 +69,7 @@ body {
   padding-right: 12rem;
   line-height: 1.5rem;
   color: var(--color-desaturated-red);
-  margin-bottom: 2rem;
+  margin-bottom: 2.5rem;
 }
 
 .base-apparel-heading span {
@@ -235,7 +235,7 @@ body {
   }
 
   .base-apparel-heading {
-    font-size: 4.5rem;
+    font-size: 4rem;
     padding-right: 10rem;
     font-weight: 500;
     line-height: 4.5rem;
@@ -264,7 +264,7 @@ body {
   }
 
   .base-apparel-heading {
-    font-size: 4rem;
+    font-size: 3.5rem;
     padding-right: 10rem;
     font-weight: 500;
     line-height: 4.5rem;
@@ -313,7 +313,7 @@ body {
   }
 
   .base-apparel-heading {
-    font-size: 4rem;
+    font-size: 3rem;
     padding-right: 10rem;
     font-weight: 500;
     line-height: 4rem;
@@ -363,7 +363,7 @@ body {
   }
 
   .base-apparel-heading {
-    font-size: 4.5rem;
+    font-size: 3rem;
     padding-right: 10rem;
     font-weight: 500;
     line-height: 3.5rem;
@@ -424,7 +424,7 @@ body {
   }
 
   .base-apparel-heading {
-    font-size: 4.5rem;
+    font-size: 3rem;
     padding: 0;
     text-align: center;
     font-weight: 500;
@@ -485,7 +485,7 @@ body {
   }
 
   .base-apparel-heading {
-    font-size: 3.5rem;
+    font-size: 3rem;
     padding: 0;
     text-align: center;
     font-weight: 500;
