--- a/index.css
+++ b/index.css
@@ -464,6 +464,7 @@
   .base-apparel-coming-soon-master {
     text-align: center;
     width: 100%;
+    min-height: 100%;
     padding: 1.5rem 2rem 1.5rem;
     position: relative;
   }
